--- a/css/style.css
+++ b/css/style.css
@@ -1,38 +1,157 @@
+html {
+    box-sizing: border-box;
+}
+
+*, *::before, *::after{
+    box-sizing: inherit;
+}
+
+body {
+    transition: .3 ease all;
+}
+
+body.dark {
+    background: #000;
+}
+
 /*Barra de navegacion*/
-.navbar {
+.menu {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
     padding: 2rem;
-    background-color: transparent;
+    background-color: #f5f6f7;
     transition: all .5s ease-in-out;
     overflow: hidden;
+    min-height: 3.25rem;
 }
 
-.navbar a {
+body.dark nav {
+    background: #222222;
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.16);
+}
+
+body.dark nav a {
+    color: #C8C8C8;
+}
+
+body.dark nav a:hover {
+    color: #6E07F3;
+}
+
+.logo {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.ham {
+    display: none;
+    cursor: pointer;
+    border: none;
+    margin: 0;
+    padding: 0;
+    background-color: transparent;
+}
+
+.ham span{
+    display: block;
+    background-color: #6E07F3;
+    height: 3px;
+    width: 28px;
+    margin: 10px auto;
+    border-radius: 2px;
+}
+
+.enlaces {
+    display: flex;
+    padding: 0;
+}
+
+.enlaces li {
+    padding: 0 40px;
+    list-style-type: none;
+
+}
+
+.enlaces li a {
+    text-decoration: none;
+    font-size: 1.1rem;
     color: black;
     font-weight: 600;
-    font-size: 20px;
+    transition: all 0.1s ease-in;
 }
 
-.navbar-collapse {
-    align-items: center;
-    justify-content: space-between;
+.enlaces li a:hover {
+    color: #6E07F3;
 }
 
-@media screen and (max-width: 767px) {
-    .navbar{
-        background-color: #f5f6f7;
+@media (max-width: 992px) {
+    .logo img{
+        padding-left: 25px;
     }
-}
+    .ham {
+        display: block;
+        position: absolute;
+        top: 15px;
+        right: 25px;
+        transition: 0.2s 0.1s;
+    }
 
-@media screen and (max-width: 767px) {
-    .navbar-brand{
+    .ham:hover {
+        transform: rotate(360deg);
+    }
+
+    nav {
+        flex-direction: column;
+        align-items: flex-start;
+        padding-top: 25px;
+        padding-bottom: 25px;
+    }
+
+    .enlaces {
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        height: 92vh;
+        margin: 0;
+        width: 100%;
         display: none;
+        opacity: 0;
     }
+
+    .enlaces li a{
+        width: 100%;
+        text-align: center;
+        padding: 20px;
+    }
+
 }
 
-.navbar-nav {
-justify-content: center;
-align-items: center;
+@keyframes mostrar {
+    from{opacity: 0;}
+    to{opacity: 1;}
 }
+
+.enlaces.activado {
+    display: flex;
+    animation:mostrar 350ms ease-in-out
+    both;
+}
+
+.br-1.animado {
+    transform: rotate(-45deg) translate(-10px, 8px);
+}
+
+.br-2.animado {
+    opacity: 0;
+}
+
+.br-3.animado {
+    transform: rotate(45deg) translate(-10px, -8px);
+}
+
+/*Hero*/
 
 section {
     display: flex;
@@ -45,6 +164,18 @@ section {
     width: 2.5em;
     height: 2.5em;
     border-radius: 50%;
+}
+
+body.dark .hero {
+    background: #222222;
+}
+
+body.dark #title {
+    color: white;
+}
+
+body.dark #title-2 {
+    color: white;
 }
 
 .hero {
@@ -113,7 +244,15 @@ h1 {
 
 .experiencia {
     padding: 40px 40px 60px 40px;
+}
 
+body.dark .experiencia {
+    background: #222222;
+}
+
+body.dark .seccion-clara{
+    color: white;
+    background-color: #000;
 }
 
 .seccion-clara {
@@ -216,6 +355,14 @@ h1 {
     margin-bottom: 0;
 }
 
+body.dark .seccion-titulo {
+    color: white;
+}
+
+body.dark .seccion-descripcion {
+    color: white;
+}
+
 .proyecto-2:hover img {
     opacity: 0.2;
 }
@@ -226,6 +373,10 @@ h1 {
 
 .overlay .iconos {
     display: flex;
+}
+
+body.dark .overlay i {
+    color: white;
 }
 
 .overlay i {
@@ -255,13 +406,67 @@ h1 {
     transition: all 0.2s ease-in;
 } 
 
+body.dark .proyectos button {
+    background-color: #6E07F3;
+    color: white;
+    border: #6E07F3 solid 2px;
+}
+
+body.dark .proyectos button:hover {
+    background-color: transparent;
+}
+
 .proyectos button:hover {
     background-color: #6E07F3;
     color: white;
     border: #6E07F3 solid 2px;
 }
 
-.testimonios {
+.switch {
+    background-color: #343D5B;
+    border-radius: 1000px;
+    border: none;
+    position: relative;
+    cursor: pointer;
+    display: flex;
+    outline: none;
+}
+
+.switch::after {
+    content: "";
+    display: block;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    background: #F1F1F1;
+    top: 0;
+    left: 0;
+    right: unset;
+    border-radius: 100px;
+    transition: .3s ease all;
+    box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, .2);
+}
+
+.switch.active {
+    background-color: orange;
+    color: #000;
+}
+
+.switch.active::after {
+    right: 0;
+    left: unset;
+}
+
+.switch span {
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    display: block;
+    background: none;
+    color: #fff;
+}
+
+/*.testimonios {
     padding: 40px 40px 80px 40px;   
 }
 
@@ -322,6 +527,10 @@ h1 {
     .testimonio-texto {
         font-size: 18px;
     }
+}*/
+
+.white {
+    height: 65px;
 }
 
 .contacto .container {
@@ -349,6 +558,7 @@ h1 {
 }
 
 .contacto button {
+    font-family: 'Lato', sans-serif;
     color: white;
     background-color: transparent;
     font-weight: bold;
